lots of cleanup and some reorg